user update and deleted added

--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-REACT_APP_apiKey=AIzaSyDe3686M3oLr_3P_K_l1EZwZOrPlbTnvv4
-REACT_APP_authDomain=movie-app-opt.firebaseapp.com
-REACT_APP_projectId= movie-app-opt
-REACT_APP_storageBucket=movie-app-opt.appspot.com
-REACT_APP_messagingSenderId=919346396318
-REACT_APP_appId=1:919346396318:web:9afd801327437ddbfa4f8f
-REACT_APP_TMDB_KEY=2ffb1cad850221d084465c45e6fd0612
+REACT_APP_API_KEY=AIzaSyDvLSpApnOv9y--j2fjUxmSQO17RtydOvQ
+REACT_APP_AUTH_DOMAIN=useradd-ad1c9.firebaseapp.com
+REACT_APP_DATABASE_URL=https://useradd-ad1c9-default-rtdb.europe-west1.firebasedatabase.app
+REACT_APP_PROJECT_ID= useradd-ad1c9
+REACT_APP_STORAGE_BUCKET=useradd-ad1c9.appspot.com
+REACT_APP_MESSAGING_SENDER_ID=574652493539
+REACT_APP_APP_ID=1:574652493539:web:3715d8b77005b27c295fd6
 
